fix(ffe-form): tooltip wraps on next line

--- a/packages/ffe-form/less/tooltip.less
+++ b/packages/ffe-form/less/tooltip.less
@@ -11,7 +11,7 @@
         margin: 0 0 @ffe-spacing-2xs @ffe-spacing-sm;
         padding: 0;
         transition: border-color @ffe-transition-duration @ffe-ease;
-        display: grid;
+        display: inline-grid;
         place-items: center;
         font-family: sans-serif;
         line-height: 1;
